--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "gsap": "^3.11.3",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-countdown": "^2.3.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.55.0"
   },
   "devDependencies": {
