--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
+    "aos": "^2.3.4",
+    "fslightbox-react": "^1.6.2-2",
     "gsap": "^3.11.3",
     "next": "12.3.1",
+    "photoswipe": "^5.3.3",
     "react": "18.2.0",
     "react-countdown": "^2.3.3",
     "react-dom": "18.2.0",
@@ -23,9 +26,12 @@
     "valtio": "^1.7.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
+    "@types/fslightbox-react": "^1.4.2",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-image-gallery": "^1.2.0",
     "@types/three": "^0.144.0",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
